--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,7 @@
+@import 'vars';
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
+
 html, body {
   margin: 0;
   padding: 0;
