--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,8 +1,9 @@
 $primary: #40d4d9;
 $secondary: #ffd283;
+$gray: #939797;
 
 $font-title: 'Dancing Script', cursive;
-
+$font-product: 'Fredoka One', cursive;
 
 $colors: (
   "primary": $primary,
