--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,14 @@
 @import 'vars';
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 html, body {
   margin: 0;
   padding: 0;
   height: 100vh;
   width: 100vw;
+}
+
+nav{
+  justify-content: space-between;
 }
