add to cart ready

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,7 @@
 $primary: #40d4d9;
 $secondary: #ffd283;
 $gray: #939797;
+$gray-light: #e1e1e1;
 
 $font-title: 'Dancing Script', cursive;
 $font-product: 'Fredoka One', cursive;
