--- a/src/styles/NotFoundPage.scss
+++ b/src/styles/NotFoundPage.scss
@@ -8,12 +8,14 @@
   height: calc(100vh - 120px);
   text-align: center;
   color: $primary;
+  font-family: $font-product;
   h2{
-    font-family: $font-title;
     font-size: 3rem;
   }
   h4{
-    font-family: $font-title;
     font-size: 2rem;
+  }
+  button{
+    margin-top: 1rem;
   }
 }
